name:           lexml-parser
version:        0.1
cabal-version:  >= 1.12
build-type: Simple

executable simplelinker
  default-language: Haskell2010
  hs-source-dirs:  src/main/haskell
  main-is:         SimpleLinker.hs
  other-modules:   LexML.Linker.Lexer
  build-depends:   base >= 4,
                   syb >= 0.4.1, 
                   network >= 2.4.1.2,
                   network-uri >= 2.6.0.3,
                   time >= 1.4.0.1,
                   hslogger >= 1.2.3,
                   tagsoup >= 0.13,
                   parsec >= 3.1.3,
                   mtl >= 2.1.2,
                   cmdargs >= 0.10.5,
                   rts >= 0.1,
                   utf8-string >= 0.3.7,
                   bytestring >= 0.10.0.2,
                   containers >= 0.5.0.0,
                   array >= 0.4.0.1
