name:           lexml-parser
version:        0.2
cabal-version:  >= 1.12
build-type: Simple

executable linkertool
  default-language: Haskell2010
  hs-source-dirs:  src/main/haskell
  main-is:         LinkerTool.hs
  other-modules:   LexML.Linker.Lexer
  build-depends:   base >= 4,
                   syb >= 0.4.1, 
                   network >= 2.4.1.2,
                   network-uri >= 2.6.0.3,
                   time >= 1.4.0.1,
                   hslogger >= 1.2.3,
                   tagsoup >= 0.13,
                   parsec >= 3.1.3,
                   mtl >= 2.1.2,
                   cmdargs >= 0.10.5,
                   cryptohash-md5 >= 0.11.100.1,
                   rts >= 0.1,
                   utf8-string >= 0.3.7,
                   bytestring >= 0.10.0.2,
                   containers >= 0.5.0.0,
                   array >= 0.4.0.1,
                   network-uri

executable simplelinker
  default-language: Haskell2010
  hs-source-dirs:  src/main/haskell
  main-is:         SimpleLinker.hs
  other-modules:   LexML.Linker.Lexer
  build-depends:   base >= 4,
                   syb >= 0.4.1, 
                   network >= 2.4.1.2,
                   network-uri >= 2.6.0.3,
                   time >= 1.4.0.1,
                   hslogger >= 1.2.3,
                   tagsoup >= 0.13,
                   parsec >= 3.1.3,
                   mtl >= 2.1.2,
                   cmdargs >= 0.10.5,
                   cryptohash-md5 >= 0.11.100.1,
                   rts >= 0.1,
                   utf8-string >= 0.3.7,
                   bytestring >= 0.10.0.2,
                   containers >= 0.5.0.0,
                   array >= 0.4.0.1

executable LinkerServer
  default-language: Haskell2010
  hs-source-dirs:  src/main/haskell
  main-is:         LinkerServer.hs
  other-modules:   LexML.Linker.Lexer
  ghc-options: -O3 -threaded -feager-blackholing -with-rtsopts=-N  -rtsopts
  build-depends:   base >= 4,
                   syb >= 0.4.1, 
                   network >= 2.4.1.2,
                   network-uri >= 2.6.0.3,
                   time >= 1.4.0.1,
                   hslogger >= 1.2.3,
                   tagsoup >= 0.13,
                   parsec >= 3.1.3,
                   mtl >= 2.1.2,
                   cmdargs >= 0.10.5,
                   cryptohash-md5 >= 0.11.100.1,
                   rts >= 0.1,
                   utf8-string >= 0.3.7,
                   bytestring >= 0.10.0.2,
                   containers >= 0.5.0.0,
                   array >= 0.4.0.1,
                   filepath >= 1.1.0.4,
                   directory >= 1.0.1.1,
                   binary >= 0.5.0.2,
                   unix >= 2.4.0.2
